<resources>
    <string name="app_name">satapp</string>
    <string name="new_ticket_image">Añadir fotos</string>
    <string name="new_ticket">Nuevo Ticket</string>
    <string name="ticket_title_hint">Título</string>
    <string name="ticket_description_hint">Describa la incidencia</string>
    <string name="inventariable_save_button">Guardar</string>
    <string name="hint_edit_inv_ubicacion">Ubicación</string>
    <string name="title_edit_inventariable">Equipo</string>
    <string name="inventariable_created_title">Creado:</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="asignar_a">Asignar ticket a</string>
    <string name="email_to_asign">Email del usuario designado</string>
    <string name="boton_asignar_incidencia">Asignar</string>
    <string name="usuarios_por_validar">¡Usuarios por validar!</string>
</resources>
