<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/custom_bg"
    tools:context=".tickets.NewTicketActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.076"
        app:srcCompat="@drawable/ic_logo" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="64dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <EditText
            android:id="@+id/editTextTicketTitulo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/ticket_title_hint"
            android:inputType="text"
            android:scrollbarSize="4dp"
            app:layout_constraintVertical_bias="0.139" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="309dp"
        android:layout_height="124dp"
        android:layout_marginTop="32dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="@+id/cardView"
        app:layout_constraintStart_toStartOf="@+id/cardView"
        app:layout_constraintTop_toBottomOf="@+id/cardView">

        <EditText
            android:id="@+id/editTextTicketDescription"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/ticket_description_hint"
            android:inputType="text" />

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/buttonNewTicket"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/custom_button"
        android:text="@string/new_ticket"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="@+id/cardView2"
        app:layout_constraintStart_toStartOf="@+id/cardView2"
        app:layout_constraintTop_toBottomOf="@+id/cardView2" />


</androidx.constraintlayout.widget.ConstraintLayout>