<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".inventariables.InventariableDetalleFromMenuActivity">

    <ImageView
        android:id="@+id/imageviewInventariable"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toEndOf="@+id/textViewTitle"
        app:layout_constraintTop_toTopOf="@+id/textViewTitle"
        app:srcCompat="@drawable/ic_add_immage" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewR4"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardViewR2">

        <EditText
            android:id="@+id/ubicacionInvEdit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/hint_edit_inv_ubicacion"
            android:scrollbarSize="4dp"
            app:layout_constraintVertical_bias="0.139" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewR3"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageviewInventariable">

        <EditText
            android:id="@+id/nombreInvEdit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:ems="10"
            android:gravity="center"
            android:hint="Nombre"
            android:inputType="textPersonName"
            android:scrollbarSize="4dp"
            app:layout_constraintVertical_bias="0.139" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewR"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:textAlignment="center"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardViewR3">

        <Spinner
            android:id="@+id/CmbOpciones"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:ems="10"
            android:gravity="center"
            android:textAlignment="center"
            android:hint="Tipo"
            android:scrollbarSize="4dp"
            app:layout_constraintVertical_bias="0.139" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewR6"
        android:layout_width="95dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintStart_toStartOf="@+id/cardViewR4"
        app:layout_constraintTop_toBottomOf="@+id/cardViewR4">

        <TextView
            android:id="@+id/createdAt"
            android:layout_width="95dp"
            android:layout_height="50dp"
            android:background="@null"
            android:ems="10"
            android:gravity="center"
            android:hint="Creado"
            android:text="@string/inventariable_created_title" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewR5"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="24dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="@+id/cardViewR4"
        app:layout_constraintStart_toEndOf="@+id/cardViewR6"
        app:layout_constraintTop_toBottomOf="@+id/cardViewR4">

        <TextView
            android:id="@+id/createdAtValue"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:background="@null"
            android:ems="10"
            android:gravity="center"
            android:hint="Creado" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewR2"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginTop="24dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="@+id/cardViewR"
        app:layout_constraintStart_toStartOf="@+id/cardViewR"
        app:layout_constraintTop_toBottomOf="@+id/cardViewR">

        <EditText
            android:id="@+id/descripcionInvEdit"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@null"
            android:ems="10"
            android:gravity="center"
            android:hint="Descripción" />

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/buttonInvEdit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/custom_button"
        android:text="@string/inventariable_save_button"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardViewR5" />

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginTop="28dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:text="@string/title_edit_inventariable"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/imageViewRegister"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>